<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:title="@string/title_activity_settings">

    <PreferenceCategory app:title="@string/settings_ad_header">

        <SwitchPreferenceCompat
            app:key="hideAd"
            app:summary="@string/settings_remove_ads_desc"
            app:title="@string/settings_remove_ads_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_client_header">

        <SwitchPreferenceCompat
            app:key="replaceUserAgent"
            app:summary="@string/settings_replace_ua_desc"
            app:title="@string/settings_replace_ua_title" />

        <EditTextPreference
            android:selectAllOnFocus="true"
            android:singleLine="true"
            app:dependency="replaceUserAgent"
            app:key="userAgent"
            app:title="@string/settings_ua_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="removeMonaKey"
            app:summary="@string/settings_remove_api_id_desc"
            app:title="@string/settings_remove_api_id_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_about_header">

        <Preference
            app:key="github"
            app:summary="@string/settings_github_desc"
            app:title="@string/settings_github_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/repository_url" />
        </Preference>

        <Preference
            app:key="status"
            app:summary="@string/settings_status_desc"
            app:title="@string/settings_status_title">
            <intent
                android:targetClass="com.google.android.gms.oss.licenses.OssLicensesMenuActivity"
                android:targetPackage="com.nonnonstop.tsubonofuta" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>