<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:title="@string/settings_advanced_header">

    <PreferenceCategory app:title="@string/settings_advanced_header">

        <EditTextPreference
            android:selectAllOnFocus="true"
            android:singleLine="true"
            app:key="CLASS_THREAD_AD"
            app:title="@string/settings_class_thread_ad_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:selectAllOnFocus="true"
            android:singleLine="true"
            app:key="CLASS_INLINE_AD"
            app:title="@string/settings_class_inline_ad_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:selectAllOnFocus="true"
            android:singleLine="true"
            app:key="CLASS_VIDEO_MANAGER"
            app:title="@string/settings_class_video_manager_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:selectAllOnFocus="true"
            android:singleLine="true"
            app:key="CLASS_VIDEO_REQUEST"
            app:title="@string/settings_class_video_request_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:selectAllOnFocus="true"
            android:singleLine="true"
            app:key="METHOD_VIDEO_OPEN"
            app:title="@string/settings_method_video_open_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:selectAllOnFocus="true"
            android:singleLine="true"
            app:key="METHOD_VIDEO_COMPLETE"
            app:title="@string/settings_method_video_complete_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:selectAllOnFocus="true"
            android:singleLine="true"
            app:key="CLASS_TARGET_ACTIVITY"
            app:title="@string/settings_class_noad_target_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>